# turtlenest

./: .dockerignore  .envrc  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  TODO  docker-compose.caddyproxy.yml  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  env.SAMPLE  input.css  manage.py  package.json  pyproject.toml  pyrightconfig.json  rebuild.sh  redeploy.sh  requirements.in  requirements.txt  tailwind.config.js
.github/workflows/: tests.yml
api/: api_legacy.py  api_v1.py  test_api_legacy.py  test_api_v1.py
apps/blog.X/: models.py  views.py
apps/blog.X/migrations/: 0001_initial.py
apps/classrooms/: admin.py  apps.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
apps/classrooms/migrations/: 0001_initial.py  0002_initial.py  0003_remove_group_image.py
apps/content/: models.py
apps/content/migrations/: 0001_initial.py
apps/legacydb/: admin.py  apps.py  dbrouters.py  models.py
apps/legacydb/migrations/: 0001_initial.py
apps/pages/: admin.py  models.py  tests.py  urls.py  views.py
apps/pages/fixtures/: attachments.json  initial-pages.json
apps/pages/migrations/: 0001_initial.py
apps/projects/: admin.py  forms.py  models.py  tests.py  urls.py  utils.X.py  views.py
apps/projects/migrations/: 0001_initial.py  0002_alter_category_options.py  0003_alter_project_notes.py  0004_category_order.py  0005_alter_category_options.py  0006_alter_comment_options.py  0007_alter_project_is_public.py
apps/projects/templatetags/: project_renderers.py  render_partial.py  tags.py
apps/users/: admin.py  allauth.py  apps.py  forms.py  hashers.py  models.py  signals.py  tests.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_alter_user_notify_comment_alter_user_notify_like.py  0003_fix_bulk_accounts.py
apps/wp_blog/: admin.py  apps.py  models.py  urls.py  views.py
apps/wp_blog/migrations/: 0001_initial.py  0002_post_categories.py
deployment/: docker-compose.caddyproxy.yml  nginx.conf.sample
locale/de/LC_MESSAGES/: django.po
static/: staticfiles.json
static/css/: base.css  override.css  toots.css  tw.css
static/grappelli/stylesheets/: rtl.0a862b81a6bf.css.br  rtl.css.br  screen.72c136c6aec6.css.br  screen.css.br
static/hijack/: hijack.3d13d0f34b84.scss.br  hijack.85869e60fc65.js.br  hijack.min.css.br  hijack.min.eab7fdaf71ba.js.br
static/js/: init.js  toast.js
static/markdownx/js/: markdownx.30d4afaaed76.js.br
static/wagtailadmin/css/: core.346a169851ba.css.br  core.css  core.css.br
static/wagtailadmin/js/: bulk-actions.a5d3bae025e0.js.br  chooser-modal.038a51f7d849.js.br  chooser-widget-telepath.js.br  chooser-widget.6dd9f9842a7e.js.br  comments.2c09cf1d2377.js.br  core.316db9cf7dda.js.br  core.js.LICENSE.5d95c65bbee2.txt.br  date-time-chooser.b394bdbac490.js.br  draftail.js.LICENSE.txt.br  (+19 more)
templates/: 403.html  404.html  429.html  500.html  base.html  base_app.html  beta.html  footer.html  index.html  nav.html  page.html  run.html
templates/account/: email.html  login.html  login_custom.html  verification_sent.html
templates/allauth-account-orig-templates/: login.html
templates/blog/: blog_authors.html  blog_categories.html  blog_detail.html  blog_list.html  blog_tags.html
templates/classrooms/: _member_card.html  _members.html  _members_bulkadd.html  _projects.html  group_confirm_delete.html  group_detail.html  group_form.html  group_list.html  mygroups.html  trainer_request.html  unit_confirm_delete.html  unit_form.html
templates/content/: base.html  blog_index_page.html  blog_page.html  content_page.html
templates/emails/: delete_account.txt  flag_project.txt  notify_comment.txt  notify_like.txt  trainer_request.txt
templates/pages/: page.html
templates/projects/: __list_header.html  _comment.html  _comment_list.html  _is_published.html  _is_shared.html  _is_unshared.html  _project.html  _project_list.html  _project_stats.html  _remix_list_item.html  _search_result.html  _search_result_list.html  _search_user_result_list.html  _user.html  _user_detail_project_list.html  categories.html  project_detail.html  project_edit.html  project_flag.html  project_list.html  search.html  stats.html  tags.html  user_detail.html
templates/tags/: tagcloud.html
templates/users/: delete_account.html  profile.html  user_details.html
turtlenest/: asgi.py  celery.py  middleware.py  settings.py  urls.py  wsgi.py
(+55 files in other folders)
