[project]
name = "turtlenest"
version = "1.0.0"
description = "Cloud and Sharing platform for Turtlestitch.org"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "celery>=5.4.0",
    "crispy-tailwind>=1.0.3",
    "django-allauth[socialaccount]>=65.1.0",
    "django-browser-reload>=1.17.0",
    "django-cleanup>=9.0.0",
    "django-cors-headers>=4.6.0",
    "django-crispy-forms>=2.3",
    "django-debug-toolbar>=4.4.6",
    "django-extensions>=3.2.3",
    "django-filter>=24.3",
    "django-hijack>=3.7.0",
    "django-htmx>=1.21.0",
    "django-jazzmin>=3.0.1",
    "django-markdownx>=4.0.7",
    "django-markup>=1.9",
    "django-ninja>=1.3.0",
    "django-ratelimit>=4.1.0",
    "django-summernote>=0.8.20.0",
    "django-taggit>=6.1.0",
    "django-tailwind>=3.8.0",
    "django-template-partials>=24.4",
    "django>=5.1.2",
    "fastembed>=0.4.1",
    "gunicorn>=23.0.0",
    "lxml>=5.3.0",
    "pgvector>=0.3.6",
    "psycopg>=3.2.3",
    "pymemcache>=4.0.0",
    "requests>=2.32.3",
    "sentry-sdk>=2.17.0",
    "shortuuid>=1.0.13",
    "whitenoise>=6.8.2",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.7.1",
]
